cmake_minimum_required(VERSION 3.10)
project(vkDemos)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_subdirectory(third-party)
add_executable(BasicLighting basic-lighting/main.cc)
target_include_directories(BasicLighting PUBLIC include/)
find_package(Vulkan REQUIRED)
target_link_libraries(BasicLighting Vulkan::Vulkan glfw glm imgui)
add_custom_command(TARGET BasicLighting POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/basic-lighting/models/ $<TARGET_FILE_DIR:BasicLighting>/models/)
add_custom_command(TARGET BasicLighting POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/basic-lighting/shaders/ $<TARGET_FILE_DIR:BasicLighting>/shaders/)
add_custom_command(TARGET BasicLighting POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/basic-lighting/textures/ $<TARGET_FILE_DIR:BasicLighting>/textures/)
